detalles de reportes varios

--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -175,7 +175,7 @@
         swal({
         type: 'error',
                 title: 'Oops...',
-                text: 'Error la fecha hasata debe ser Mayor!',
+                text: 'Error la fecha hasta debe ser Mayor!',
                 footer: '<a href>Why do I have this issue?</a>'
         })
                 return false;
