--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="1.3310000000000073"/>
-	<property name="ireport.x" value="225"/>
-	<property name="ireport.y" value="67"/>
+	<property name="ireport.x" value="355"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -293,10 +293,12 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 			</textField>
 			<textField>
 				<reportElement x="609" y="0" width="100" height="14" uuid="6a4487a2-327d-4fe1-a794-19fc16fb7ca2"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="714" y="0" width="80" height="14" uuid="1b6109fe-2d7c-4179-be27-a3ac43aa2485"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 		</band>
